Bug 470280 - Color scheme doesn't change after applying accent color from bw wallpaper
Summary: Color scheme doesn't change after applying accent color from bw wallpaper
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_colors (other bugs)
Version First Reported In: 5.27.5
Platform: Other FreeBSD
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-05-26 09:58 UTC by Albina F
Modified: 2023-06-13 07:45 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.27.6
Sentry Crash Report:


Attachments
Color scheme doesn't change after applying accent color from current wallpaper (113.07 KB, image/jpeg)
2023-05-26 09:58 UTC, Albina F
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Albina F 2023-05-26 09:58:07 UTC
Created attachment 159263 [details]
Color scheme doesn't change after applying accent color from current wallpaper

STEPS TO REPRODUCE
1. Go to System settings -> Appearance -> Apply Breeze theme (mark all checkboxes)
2. Click right button on desktop -> Configure Desktop and Wallpaper...
3. Choose bw wallpaper - 'Cold Ripple' -> Apply -> OK
4. Go to Global theme system settings - Colors
3. Choose 'Use accent color': Red -> Apply
4. Choose 'Use accent color' - from current wallpaper -> Apply

OBSERVED RESULT
Color scheme remains red. 

EXPECTED RESULT
Color scheme changes to bw colors according to applied wallpaper.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: FreeBSD 
KDE Plasma Version: 5.27.5
KDE Frameworks Version: 5.106.0
Qt Version: 5.15.8
Comment 1 Nate Graham 2023-05-31 18:46:42 UTC
Works for me with those steps. Is this 100% reproducible for you?
Comment 2 Albina F 2023-06-01 12:32:04 UTC
Yes, it still reproduces.
Comment 3 Nate Graham 2023-06-02 20:42:38 UTC
Oops, was not testing correctly, sorry. I can in fact reproduce this issue.

I wonder if the lack of any colors is throwing off the detector.
Comment 4 Fushan Wen 2023-06-03 02:20:58 UTC
Can reproduce
Comment 5 Bug Janitor Service 2023-06-03 04:31:24 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/2970
Comment 6 Fushan Wen 2023-06-03 05:10:44 UTC
Git commit cd05ae276c5fb95b129ffd1b2bf651549afe5a48 by Fushan Wen.
Committed on 03/06/2023 at 05:08.
Pushed by fusionfuture into branch 'Plasma/5.27'.

Desktop: set accentColor binding enabled condition

Without this, accentColor may still be updated after usedInAccentColor becomes false.

M  +1    -0    desktoppackage/contents/views/Desktop.qml

https://invent.kde.org/plasma/plasma-desktop/-/commit/cd05ae276c5fb95b129ffd1b2bf651549afe5a48
Comment 7 Fushan Wen 2023-06-03 05:11:54 UTC
Git commit 7695386070f6c3c61ac3b95c2234566ef0f5301b by Fushan Wen.
Committed on 03/06/2023 at 05:11.
Pushed by fusionfuture into branch 'master'.

Desktop: set accentColor binding enabled condition

Without this, accentColor may still be updated after usedInAccentColor becomes false.


(cherry picked from commit cd05ae276c5fb95b129ffd1b2bf651549afe5a48)

M  +1    -0    desktoppackage/contents/views/Desktop.qml

https://invent.kde.org/plasma/plasma-desktop/-/commit/7695386070f6c3c61ac3b95c2234566ef0f5301b
Comment 8 Fushan Wen 2023-06-13 01:09:24 UTC
Git commit 4c08bf02d42b3e67854640e4c2ee3a712adf3099 by Fushan Wen.
Committed on 13/06/2023 at 00:52.
Pushed by fusionfuture into branch 'Plasma/5.27'.

shell: make accent color optional, and enable accent color after slot connection

1. `m_accentColor` in `DesktopView` now becomes an optional value, so
   when the current accent color is transparent, `ShellCorona::colorChanged`
   signal can still be emitted without being blocked by `accentColor == m_accentColor`.
2. The `ShellCorona::colorChanged` signal may be emitted earlier than
   `m_fakeColorRequestConn` is established, so connect to the slot
   before enabling accent color from wallpaper.

STR:

1. Disable accent color from wallpaper
2. Switch to "Cold Ripple" wallpaper
3. Restart plasmashell.
4. Run `qdbus-qt5 org.kde.plasmashell /PlasmaShell org.kde.PlasmaShell.color`

Before this commit, the command will hang and quit with error. After
this commit, the command will print "0".
FIXED-IN: 5.27.6

M  +15   -6    shell/desktopview.cpp
M  +5    -2    shell/desktopview.h
M  +5    -3    shell/shellcorona.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/4c08bf02d42b3e67854640e4c2ee3a712adf3099
Comment 9 Fushan Wen 2023-06-13 07:45:17 UTC
Git commit e5da1eb6cdd35c8d18f1fdec121cb3cb50103a37 by Fushan Wen.
Committed on 13/06/2023 at 07:44.
Pushed by fusionfuture into branch 'master'.

shell: make accent color optional, and enable accent color after slot connection

1. `m_accentColor` in `DesktopView` now becomes an optional value, so
   when the current accent color is transparent, `ShellCorona::colorChanged`
   signal can still be emitted without being blocked by `accentColor == m_accentColor`.
2. The `ShellCorona::colorChanged` signal may be emitted earlier than
   `m_fakeColorRequestConn` is established, so connect to the slot
   before enabling accent color from wallpaper.

STR:

1. Disable accent color from wallpaper
2. Switch to "Cold Ripple" wallpaper
3. Restart plasmashell.
4. Run `qdbus-qt5 org.kde.plasmashell /PlasmaShell org.kde.PlasmaShell.color`

Before this commit, the command will hang and quit with error. After
this commit, the command will print "0".
FIXED-IN: 5.27.6


(cherry picked from commit 4c08bf02d42b3e67854640e4c2ee3a712adf3099)

M  +15   -6    shell/desktopview.cpp
M  +5    -2    shell/desktopview.h
M  +5    -3    shell/shellcorona.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/e5da1eb6cdd35c8d18f1fdec121cb3cb50103a37