shell: make accent color optional, and enable accent color after slot connection

1. `m_accentColor` in `DesktopView` now becomes an optional value, so
   when the current accent color is transparent, `ShellCorona::colorChanged`
   signal can still be emitted without being blocked by `accentColor == m_accentColor`.
2. The `ShellCorona::colorChanged` signal may be emitted earlier than
   `m_fakeColorRequestConn` is established, so connect to the slot
   before enabling accent color from wallpaper.

STR:

1. Disable accent color from wallpaper
2. Switch to "Cold Ripple" wallpaper
3. Restart plasmashell.
4. Run `qdbus-qt5 org.kde.plasmashell /PlasmaShell org.kde.PlasmaShell.color`

Before this commit, the command will hang and quit with error. After
this commit, the command will print "0".

BUG: 470280
FIXED-IN: 5.27.6


(cherry picked from commit 4c08bf02d42b3e67854640e4c2ee3a712adf3099)