shell/shellcorona.cpp
@@ -1599,10 +1599,9 @@ void ShellCorona::toggleDashboard()
 
 void ShellCorona::handleColorRequestedFromDBus(const QDBusMessage &msg)
 {
+    Q_ASSERT(!m_accentColorFromWallpaperEnabled);
+    Q_ASSERT(!m_fakeColorRequestConn);
     msg.setDelayedReply(true);
-
-    m_accentColorFromWallpaperEnabled = true;
-    Q_EMIT accentColorFromWallpaperEnabledChanged();
 
     m_fakeColorRequestConn = connect(this, &ShellCorona::colorChanged, this, [this, msg] {
         disconnect(m_fakeColorRequestConn);
@@ -1614,6 +1613,9 @@ void ShellCorona::handleColorRequestedFromDBus(const QDBusMessage &msg)
         const QDBusMessage reply = msg.createReply(color);
         QDBusConnection::sessionBus().send(reply);
     });
+
+    m_accentColorFromWallpaperEnabled = true;
+    Q_EMIT accentColorFromWallpaperEnabledChanged();
 }
 
 QRgb ShellCorona::color() const
